@@ -729,6 +729,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8794. Improve CorruptReplicasMap#corruptReplicasMap. (yliu)
 
+    HDFS-7483. Display information per tier on the Namenode UI.
+    (Benoy Antony and wheat9 via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
